kubernetes/plexmediaserver/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: plexmediaserver
  annotations:
    reloader.stakater.com/auto: 'true'
    goldilocks.fairwinds.com/vpa-update-mode: Initial
    goldilocks.fairwinds.com/vpa-resource-policy: '{"containerPolicies":[{"containerName":"*","controlledValues":"RequestsOnly"}]}'

spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: plexmediaserver
      app.kubernetes.io/instance: plexmediaserver
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: plexmediaserver
        app.kubernetes.io/instance: plexmediaserver
    spec:
      hostNetwork: true
      runtimeClassName: nvidia
      priorityClassName: gpu-priority
      containers:
      - name: plexmediaserver
        image: plexinc/pms-docker:1.43.4.10903-e5521bd8c@sha256:e0ab27395614a8e1a4fdf84c6bc60ac664915cfdde70c52d030c7728a1c48e14
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command: [dd, if=/dev/zero, of=/config/health-check, bs=1M, count=1]
          periodSeconds: 120
          timeoutSeconds: 15
        ports:
          # See
          # https://support.plex.tv/hc/en-us/articles/201543147-What-network-ports-do-I-need-to-allow-through-my-firewall
          # for port details
        - containerPort: 32400
        - containerPort: 1900
          protocol: UDP
        - containerPort: 32410
          protocol: UDP
        - containerPort: 32412
          protocol: UDP
        - containerPort: 32413
          protocol: UDP
        - containerPort: 32414
          protocol: UDP
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /transcode
          name: transcode
        - mountPath: /data
          name: video
        resources:
          requests:
            memory: 8192Mi
            cpu: 2000m
          limits:
            nvidia.com/gpu: 1
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: plexmediaserver-config
      - name: transcode
        emptyDir:
          sizeLimit: 50Gi
      - nfs:
          server: fs2.oneill.net
          path: /volume2/shared/video
        name: video
